# PC_HWC_1

./: CMakeLists.txt  README.md  docker-compose-backpressure.yml
src/: CMakeLists.txt
src/example/: CMakeLists.txt  n1.c  n2.c  n3.c  queue.c
src/ginosa/: CMakeLists.txt  sem.h
src/ginosa/buffer_t/: buffer_t.c  buffer_t.h
src/ginosa/client_udp/: client_udp.c  client_udp.h
src/ginosa/msg_t/: msg_t.c  msg_t.h
src/ginosa/mx_node/: mx_node.c  mx_node.h
src/ginosa/mx_queue/: mx_queue.c  mx_queue.h
src/ginosa/server_udp/: server_udp.c  server_udp.h
src/test/: CMakeLists.txt  test.c
src/test/all_tests/: all_tests.c  all_tests.h
src/test/utilities/ConsumatoreBloccanteDiUnMessaggio/: ConsumatoreBloccanteDiUnMessaggio.c  ConsumatoreBloccanteDiUnMessaggio.h
src/test/utilities/Factory/: Factory.c  Factory.h
src/test/utilities/ProduttoreBloccanteDiUnMessaggio/: ProduttoreBloccanteDiUnMessaggio.c  ProduttoreBloccanteDiUnMessaggio.h
